force-app/main/default/objects/Threat_Feed__c/Threat_Feed__c.object-meta.xml
<CustomObject>
    <label>Threat Feed</label>
    <pluralLabel>Threat Feeds</pluralLabel>
    <nameField>
        <label>Feed Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Configuration record for external threat intelligence feed sources.</description>
</CustomObject>