force-app/main/default/objects/Threat_Feed__c/fields/API_Key_Reference__c.field-meta.xml
<CustomField>
    <fullName>API_Key_Reference__c</fullName>
    <label>API Key Reference</label>
    <type>Text</type>
    <length>255</length>
    <description>Reference to the Named Credential storing the actual API key. Do not store raw keys here.</description>
</CustomField>