force-app/main/default/objects/Threat_Feed__c/fields/Feed_Type__c.field-meta.xml
<CustomField>
    <fullName>Feed_Type__c</fullName>
    <label>Feed Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STIX/TAXII</fullName>
            </value>
            <value>
                <fullName>Custom JSON</fullName>
            </value>
            <value>
                <fullName>MISP</fullName>
            </value>
            <value>
                <fullName>OTX</fullName>
                <label>AlienVault OTX</label>
            </value>
            <value>
                <fullName>VirusTotal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>