force-app/main/default/objects/Threat_Feed__c/fields/Feed_URL__c.field-meta.xml
<CustomField>
    <fullName>Feed_URL__c</fullName>
    <label>Feed URL</label>
    <type>Url</type>
</CustomField>