force-app/main/default/objects/Threat_Feed__c/fields/Sync_Frequency_Hours__c.field-meta.xml
<CustomField>
    <fullName>Sync_Frequency_Hours__c</fullName>
    <label>Sync Frequency (Hours)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>