force-app/main/default/objects/Threat_Feed__c/validationRules/Sync_Frequency_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Sync_Frequency_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Sync Frequency Hours must be a positive number greater than zero.</description>
    <errorConditionFormula>NOT(ISBLANK(Sync_Frequency_Hours__c)) &amp;&amp; Sync_Frequency_Hours__c &lt;= 0</errorConditionFormula>
    <errorMessage>Sync Frequency Hours must be greater than zero.</errorMessage>
    <errorDisplayField>Sync_Frequency_Hours__c</errorDisplayField>
</ValidationRule>